<resources>
    <string name="app_name">Nurture Insight</string>
    <string name="app_logo">Nurture Insight Logo</string>
    <string name="welcomeScreen_message1">We believe in You!\nSwipe to Start your Journey.</string>
    <string name="wm_title1">Congratulations!\nYour Self-Care Journey Starts Here</string>
    <string name="wm_message1">Remember that your Mental Health is a priority, your inner peace is essential and your self-care is a necessity. </string>
    <string name="wm_title2">You are not Alone</string>
    <string name="wm_message2">In any given year 1 in 5 people will experience some form of Mental Illness. It is estimated that 400 to 500 million people
        across the planet suffer from depression alone.</string>
    <string name="wm_title3">Help is Available and Necessary</string>
    <string name="wm_message3">You can access help to start feeling better from anywhere. Although we are here to support you throughout your journey,
        it is recommended to seek professional help at serious situations.\n We are just a tool not the solution!</string>
    <string name="wm_title4">Trust the process, Trust Yourself.\nYou are b Enough!</string>
    <string name="wm_message4">Thank You for making an effort to start your journey towards living a life free of anxiety,
        depression and stress with \nNurture Insight</string>
    <string name="wm_getStarted_button">Get Started</string>
    <string name="login_message1">Welcome!</string>
    <string name="login_message2">Login to continue your Journey</string>
    <string name="login_password">Password</string>
    <string name="login_message3"><u>I forgot my password</u></string>
    <string name="login_message4">LOGIN</string>
    <string name="login_message5">Or continue with</string>
    <string name="login_message6"><u>Don\'t have an Account? Create One</u></string>
    <string name="signUp_message1">Sign Up to start your personalized Journey</string>
    <string name="signUp_message2">Email</string>
    <string name="signUp_message">Phone Number</string>
    <string name="signUp_message3">By signing up, you agree to NurtureInsight\'s Terms &amp; Conditions and Privacy Policy</string>
    <string name="signUp_message4">SIGN UP</string>
    <string name="signUp_message5">Already have an Account? Login.</string>
    <string name="signUp_error_1">You must enter your phone number!</string>
    <string name="signUp_error_2">You must enter your email!</string>
    <string name="signUp_error_3">You must enter your password!</string>
    <string name="signUp_error_4">The phone number already exists. Please try again with another phone number.</string>
    <string name="signUp_error_5">It seems like a network error has occurred. Please retry later!</string>
    <string name="signUp_error_6">\'Password\' must have at least a capital letter, a number and a special character</string>
    <string name="signUp_error_7">Please enter a valid email address.</string>
    <string name="signUp_error_8">Please enter a valid phone number.</string>
    <string name="signUp_error_9">\'Password\' must have at least 8 characters.</string>
    <string name="signUp_error_10">The email address already exists. Please try again with another email address.</string>
    <string name="signUp_error_11">You must enter your name!</string>
    <string name="login_error_1">There is no account associated with this email address.</string>
    <string name="login_error_2">Incorrect Password. Please Try Again with a different password.</string>
    <string name="login_loading_title">Nurture Insight - Login</string>
    <string name="signUp_loading_title">Nurture Insight - Sign Up</string>
    <string name="signUp_loading_message">Please wait, while we are checking your credentials</string>
    <string name="signUp_success_msg">Welcome to Nurture Insight! You can now start your Self-care Journey!</string>
    <string name="pre_login_title">You are Logged In!</string>
    <string name="pre_login_message">Please wait! We are loading your Home Page!</string>
    <string name="sos">SOS</string>
    <string name="username">Full Name</string>
    <string name="mood_question">How are you feeling today?</string>
    <string name="mood_message">"Your Mood has been recorded"</string>
    <string name="mood_tracker_msg">Your latest recorded Mood Levels of the past week on the scale of 5</string>
    <string name="chat_editTxt_hint">What\'s in your mind? Write and Post…</string>
    <string name="chat_dialog_title">Nurture Insight - Chat Community</string>
    <string name="chat_dialog_message">Do you wish to continue anonymously?</string>
    <string name="anonymous">Posted Anonymously</string>
    <string name="chat_swipe_delete">Are you sure you want to delete this post?</string>
    <string name="chat_swipe_save">Are you sure you want to save this post?</string>
    <string name="chat_MessageHint">Tap on the post to view post and comments, swipe right to save the post or swipe left to delete the post. </string>
    <string name="savedPosts">View Saved Posts</string>
    <string name="myPosts">View My Posts</string>
    <string name="chat_SavedMessageHint">Tap on the post and swipe left to remove the post from your saved area.</string>
    <string name="chat_MyMessageHint">Tap on the post and swipe left to delete your post.</string>
    <string name="therapistInfo_SpecialTitle">Your Expertise</string>
    <string name="therapistInfo_degree">Latest Degree</string>
    <string name="therapistInfo_Bio">Bio (or Other Details)</string>
    <string name="therapistInfo_workAt">You currently work at …</string>
    <string name="therapistInfo_saveButton">Save Info</string>
    <string name="therapistInfo_Message">Please enter your details below to start off as a Therapist</string>
    <string name="therapistInfo_error1">You must enter your expertise as a therapist!</string>
    <string name="therapistInfo_error2">You must enter your latest degree!</string>
    <string name="therapistInfo_error3">You must enter your other details!</string>
    <string name="therapistInfo_title">Nurture Insight - Therapist Information</string>
    <string name="browseTherapist_title">Nurture Insight\'s Professionals</string>
    <string name="profile_Title">Nurture Insight - Profile</string>
    <string name="profile_picChangeMessage">Do you want to change the profile picture?</string>
    <string name="profileErrorMsg1">Sorry! The image has not been selected! Please Try again</string>
    <string name="uploadImgMsg">Please Wait! We are uploading your Profile Picture. </string>
    <string name="cdi1_message1">Take a Breath!</string>
    <string name="cdi1_message2">Focus on your breathing to slow down the adrenaline response and the distressing thoughts.
        \nBreathe mindfully and notice the sensations of breathing into your belly. You might find it helpful to count your breaths, or to
        breath in to a count of 4, and out to a count of 4.
        \n\nObserve!\n\n
        Your thoughts and feelings.
        \nFor Example:\n  - I\'m anxious.\n  - My body\'s alarm system has been triggered.\n  - My mind is tricking me into believing I\'m in danger
        \n  - I\'m feeling really tense and hyped up.
        \n\n
        Pull Back!Ask Yourself:\n\n
        \n  - Is this really true or does it just feel that way?
        \n  - Is this fact or opinion?
        \n  - What would a friend say about this?
        \n  - What advice would I tell someone else?
        \nEven though it feels really bad, these physical sensations are a normal body response…it will pass.
        \n\n
        Your Turn!\n\nNow it\'s over to you. Don\'t worry though, this part is easy. Try something that works for you. Maybe do something that helps you
        relax, read through some positive quotes or affirmations, do some deep breathing exercises, or remind yourself that you are in the present.
        \nThere is no right or wrong thing to try, whatever works for you is best!
    </string>
    <string name="bci1_message1">Belly Breathing!</string>
    <string name="bci1_message2">
        Belly breathing is easy to do and very relaxing. Try this basic exercise anything you need to relax or relieve stress.
        \n\n  - Sit or lie flat in a comfortable position.
        \n\n  - Put one hand on your belly just below your ribs and the other hand on your chest
        \n\n  - Take a deep breath in through your nose, and let your belly push you hand out. Your chest should not move.
        \n\n  - Breathe out through pursed lips as if you were whistling. Feel the hand on your belly go in, and use it to push all the air out.
        \n\nDo this breathing 3 to 10 times. Take your time with each breath.
        \n\nWell done! Keep practicing this technique or swipe right to try out a new one if your are not feeling any better.
    </string>
    <string name="bci2_message1">4-7-8 Breathing!</string>
    <string name="bci2_message2">
        This exercise also uses belly breathing to help you relax. You can do this exercise either sitting or lying down.
        \n\n  - To start, put one hand on your belly and the other on you chest as in the belly breathing exercise.
        \n\n  - Take a deep, slow breath from you belly, and silently count to 4 as you breathe in.
        \n\n  - Hold your breath, and silently count from 1 to 7.
        \n\n  - Breathe out completely as you silently count from 1 to 8. Try to get all the air out of your lungs by the time you count to 8.
        \n\nRepeat this breathing exercise 3 to 7 times or until you feel calm.
        \n\nWell done! Keep practicing this technique or swipe right to try out a new one if your are not feeling any better.
    </string>
    <string name="bci3_message1">Roll Breathing!</string>
    <string name="journaling_form_title">Write on your Journal</string>
    <string name="journaling_form_q1">What are you grateful for today, Why?</string>
    <string name="journaling_form_q1_hint">I am grateful for…</string>
    <string name="journaling_form_q2">Write about your day today…</string>
    <string name="journaling_form_q2_hint">Today…</string>
    <string name="journaling_form_q3">What do you want to remember forever about today?</string>
    <string name="journaling_form_q3_hint">I want to remember…</string>
    <string name="journaling_form_q4">What could have been improved today?</string>
    <string name="journaling_form_q4_hint">… could have been improved today.</string>
    <string name="journaling_form_q5">Write anything that comes to your mind (Brain Dump Journaling): </string>
    <string name="journaling_form_q5_hint">Brain Dump…</string>
    <string name="save_journal_button">Save Journal</string>
</resources>