<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup.SignUpActivity">

    <ImageView
        android:id="@+id/signUp_imgView_background"
        android:layout_width="0dp"
        android:layout_height="167dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_6" />

    <TextView
        android:id="@+id/signUp_message1"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:gravity="center"
        android:text="@string/login_message1"
        android:textColor="@color/ni_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_imgView_background" />

    <TextView
        android:id="@+id/signUp_message2"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:text="@string/signUp_message1"
        android:textColor="@color/ni_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_message1" />

    <EditText
        android:id="@+id/signUp_exitText_username"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/ni_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_message2" />

    <EditText
        android:id="@+id/signUp_exitText_phoneNo"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:hint="@string/signUp_message"
        android:inputType="phone"
        android:textColor="@color/ni_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_exitText_username" />

    <EditText
        android:id="@+id/signUp_exitText_email"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:hint="@string/signUp_message2"
        android:inputType="textEmailAddress"
        android:textColor="@color/ni_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_exitText_phoneNo" />

    <EditText
        android:id="@+id/signUp_editText_password"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/ni_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_exitText_email" />

    <TextView
        android:id="@+id/signUp_message3"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:text="@string/signUp_message3"
        android:textColor="@color/ni_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editText_password" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="219dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_style"
        android:text="@string/signUp_message4"
        app:backgroundTint="@color/ni_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_message3" />

    <TextView
        android:id="@+id/signUp_message5"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:text="@string/signUp_message5"
        android:textColor="@color/ni_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_button"
        app:layout_constraintVertical_bias="0.403" />

</androidx.constraintlayout.widget.ConstraintLayout>