<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".journal.journaling_form">

        <ImageView
            android:id="@+id/main_imgView_header_txt"
            android:layout_width="389dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header" />

        <ImageView
            android:id="@+id/main_imgView_background"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_imgView_header_txt"
            app:srcCompat="@drawable/background_1" />

        <TextView
            android:id="@+id/journaling_title"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alegreya_sans_bold"
            android:gravity="center"
            android:text="@string/journaling_form_title"
            android:textColor="@color/ni_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_imgView_background" />

        <TextView
            android:id="@+id/journaling_question1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:text="@string/journaling_form_q1"
            android:textColor="@color/ni_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_title" />

        <EditText
            android:id="@+id/journaling_q1_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/journaling_form_q1_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_question1" />

        <TextView
            android:id="@+id/journaling_question2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:text="@string/journaling_form_q2"
            android:textColor="@color/ni_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_q1_answer" />

        <EditText
            android:id="@+id/journaling_q2_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/journaling_form_q2_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_question2" />

        <TextView
            android:id="@+id/journaling_question3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:text="@string/journaling_form_q3"
            android:textColor="@color/ni_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_q2_answer" />

        <EditText
            android:id="@+id/journaling_q3_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/journaling_form_q3_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_question3" />

        <TextView
            android:id="@+id/journaling_question4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:text="@string/journaling_form_q4"
            android:textColor="@color/ni_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_q3_answer" />

        <EditText
            android:id="@+id/journaling_q4_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/journaling_form_q4_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_question4" />

        <TextView
            android:id="@+id/journaling_question5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/alegreya_sans"
            android:gravity="center"
            android:text="@string/journaling_form_q5"
            android:textColor="@color/ni_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_q4_answer" />

        <EditText
            android:id="@+id/journaling_q5_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/journaling_form_q5_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_question5" />

        <Button
            android:id="@+id/save_journal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="45dp"
            android:text="@string/save_journal_button"
            app:backgroundTint="@color/ni_blue"
            android:background="@drawable/button_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journaling_q5_answer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>